--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -3,6 +3,8 @@ body {
     color: #fff;
     height: 100vh;
     margin: 0;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 #main {
@@ -13,7 +15,13 @@ body {
     text-align: center;
 }
 
+.centered > * {
+    margin-bottom: 1em;
+}
+
 .timer {
+    border: 1px solid #fff;
+    padding: 2em;
 }
 
 .controls button {
