--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,17 @@ body {
     margin: 0;
     font-size: 16px;
     line-height: 24px;
+    overflow: hidden;
+}
+
+.github {
+    display: inline;
+}
+
+svg,
+path {
+    color: #fff;
+    fill: #fff;
 }
 
 #root {
